<resources>
    <string name="app_name">SpaceRide</string>
    <string name="contentDescriptionLogo">Logo</string>
    <string name="login">Iniciar Sesión</string>
    <string name="signin">Regístrate</string>
    <string name="Nombre">Nombre</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Repetir">Repetir contraseña</string>
    <string name="NuevaContraseña">Nueva contraseña</string>
    <string name="Corrreo">Correo Electrónico</string>
    <string name="SigninDescription">Regístrate para jugar en la aplicación de escritorio y consultar tus estadísticas de juego.</string>
    <string name="LoginDescription">Inicia sesión para consultar tus datos de juego y actuzalizar la información de tu perfil</string>
    <string name="loginSignin">¿Ya tienes una cuenta?</string>
    <string name="signinLogin">¿No tienes una cuenta?</string>
    <string name="rememberMe">Recuérdame</string>
    <string name="forgottenPasswd">¿Olvidaste tu contraseña?</string>
    <string name="myAccountTitle">Mi Cuenta</string>
    <string name="myAccountDescription">Actualiza los datos de tu cuenta y autoriza con tu contraseña</string>
    <string name="myAccountDescriptionPasswd">Actualiza la contraseña de tu cuenta ingresando la contraseña anterior</string>
    <string name="myAccountButtonUI">Actualizar Información</string>
    <string name="myAccountButtonUP">Actualizar Contraseña</string>
    <string name="LOSDescription">¡Bienvenido a SpaceRide!. En este juego multijugador aprendes mientras juegas, respondiendo preguntas de conocimientos generales para ganar.</string>
    <string name="recoverPasswd">Recuperar Contraseña</string>
    <string name="FPDescription">Introduce el correo electrónico con el que te registraste</string>
    <string name="NFD">Ingresa tu pregunta o duda y  la resolveremos a la brevedad posible</string>
    <string name="NFPH">Ingrese tu duda o pregunta.</string>
    <string name="UpdateFaq">Ingresa la respuesta a la pregunta</string>
    <string name="SpaceRideDescription">Ingresa ahora a nuestro sitio web y empieza a aprender jugando</string>
    <string name="StatsTitle">Datos de Juego</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NFB">Preguntar</string>
    <string name="SupportButton">Reportar</string>
    <string name="SupportTitle">Reportar Evento</string>
    <string name="SupportDescription">Ingresa una breve descripción de la situación</string>
    <string name="SupportEdit">Descripción</string>
    <string name="ButtonAssign">Asignar</string>
    <string name="ButtonReport">Reportar</string>
    <string name="EventDescription">Ingrese la descripción del evento</string>
    <string name="TranscriptDescription">Ingrese la conversación con el usuario</string>
    <string name="ReportDescription">Ingrese la descripción del reporte</string>
    <string name="ReportSolution">Ingrese la solución del reporte</string>
    <string name="titleEvent">Registre un reporte de evento ingresando la transcripción de la conversación con el usuario, su ID y la descripción del evento</string>
    <string name="userID">ID del usuario</string>
    <string name="titleReport">Registre un reporte de mantenimiento ingresando la descripción del reporte</string>
    <string name="updateButton">Actualizar</string>
    <string name="deleteButton">Borrar</string>
    <string name="postSwitch">Publicar</string>
</resources>
