<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.User.MyAccount.MyPasswdFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/transcript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/myAccountDescriptionPasswd"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:outlineSpotShadowColor="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transcript" />

        <Button
            android:id="@+id/forgottenPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/forgottenPasswd"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwd" />

        <EditText
            android:id="@+id/npasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/NuevaContraseña"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:outlineSpotShadowColor="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgottenPasswd" />

        <EditText
            android:id="@+id/nrpasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Repetir"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:outlineSpotShadowColor="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/npasswd" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:text="@string/myAccountButtonUP"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nrpasswd" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>