<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Events.NewEventFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/transcript"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:hint="@string/TranscriptDescription"
            android:inputType="textMultiLine"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:outlineSpotShadowColor="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userID" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:hint="@string/ReportDescription"
            android:inputType="textMultiLine"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:outlineSpotShadowColor="@color/colorPrimaryLight"
            android:shadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorPrimaryLight"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transcript" />


        <TextView
            android:id="@+id/titleDesccription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/titleEvent"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/ButtonReport"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <EditText
            android:id="@+id/userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/userID"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDesccription" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>